# MockKit

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  Package.swift  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
Sources/ChromeOverridesManager/: main.swift
Sources/ChromeOverridesManager/Resources/: index-BtpDewDD.js  index-CMUFuAvW.js  index-CONaFKHo.js  index-CZo57C8q.css  index-C_YEoSwK.css  index-Codp2rZ4.css  index-CzRuK2sH.js  index-D2E7wcjY.js  index-DgSIlih5.js  index-_6KLZYum.css  index-z3qy8mW1.css  index.html
assets/: AppIcon-concept-browser-overrides.icns  AppIcon-concept-console.icns  AppIcon-concept-devtools-mock-refined.icns  AppIcon-concept-devtools-mock.icns  AppIcon-concept-prism.icns  AppIcon-concept-switch.icns  AppIcon-v2.icns  AppIcon.icns
assets/icon-concepts/: AppIcon-devtools-mock-dock-balanced.icns  AppIcon-fulltile-devtools-mock.icns  AppIcon-mock-switch-card-dock-balanced.icns  AppIcon-mock-switch-card.icns
frontend/: biome.json  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx  styles.css  types.ts
frontend/src/components/: ai-grouping-dialog.tsx  ai-grouping-scope-dialog.tsx  ai-settings-dialog.tsx  app-settings-dialog.tsx  app-sidebar.tsx  create-group-dialog.tsx  delete-confirm-dialog.tsx  endpoint-list-panel.tsx  import-curl-dialog.tsx  main-toolbar.tsx  response-body-editor.tsx
frontend/src/lib/: cn.ts  json.ts  (+2 more)
scripts/: build-app.sh  check-chrome-overrides.js  dev-app.sh
src/: main.rs
(+17 files in other folders)
