[package]
name = "mockkit-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mockkit-core"
path = "src/main.rs"

[[bin]]
name = "mockkit"
path = "src/bin/mockkit.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "json", "rustls-tls", "zstd"] }
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }
